Removing defunct code

--- a/web/app/participant/notes.tpl.html
+++ b/web/app/participant/notes.tpl.html
@@ -18,7 +18,7 @@
         always showing at the top.
       </p>
       <hr />
-      <div ng-if="allowAdd" class="panel panel-info">
+      <div class="panel panel-info">
         <div class="panel-heading">
           <span>Add note</span>
         </div>
