--- a/web/app/cenozo/modal-message.tpl.html
+++ b/web/app/cenozo/modal-message.tpl.html
@@ -2,7 +2,9 @@
   <div class="modal-header bg-primary">
     <h4 class="modal-title">{{ title }}</h4>
   </div>
-  <div class="modal-body allow-select" ng-class="{ 'text-danger': error }">{{ message }}</div>
+  <div class="modal-body allow-select" ng-class="{ 'text-danger': error }">
+    <span style="white-space: pre-wrap;">{{ message }}</span>
+  </div>
   <div class="modal-footer bg-info" ng-if="!block">
     <button type="submit" class="btn btn-primary">Close</button>
   </div>
