Fixing bug in modal password template

--- a/web/app/cenozo/modal-password.tpl.html
+++ b/web/app/cenozo/modal-password.tpl.html
@@ -7,7 +7,7 @@
       Fill out this form to change your password:
     </p>
     <hr />
-    <div ng-if="confirm"
+    <div ng-show="confirm"
          class="form-group"
          ng-class="{ 'has-feedback has-error': form.currentPass.$dirty && form.currentPass.$invalid }">
       <label for="currentPass" class="col-sm-4 control-label">Current Password</label>
