--- a/web/app/application/view.tpl.html
+++ b/web/app/application/view.tpl.html
@@ -1,9 +1,11 @@
 <cn-record-view model="model"></cn-record-view>
 <div class="vertical-spacer" ng-repeat="child in model.module.choosing" ng-if="showChildren">
-  <cn-record-list model="model.viewModel[child.subject.camel+'Model']"></cn-record-list>
+  <cn-record-list ng-if="model.viewModel[child.subject.camel+'Model']"
+                  model="model.viewModel[child.subject.camel+'Model']"></cn-record-list>
 </div>
 <div class="vertical-spacer" ng-repeat="child in model.module.children" ng-if="showChildren">
-  <cn-record-list model="model.viewModel[child.subject.camel+'Model']"></cn-record-list>
+  <cn-record-list ng-if="model.viewModel[child.subject.camel+'Model']"
+                  model="model.viewModel[child.subject.camel+'Model']"></cn-record-list>
 </div>
 <div class="well vertical-spacer text-info" ng-if="!showChildren">
   Note: cohort, role, site and script lists can only be viewed for the application you are currently using.
