--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -81,66 +81,103 @@
               class="form-control"
               ng-readonly="input.constant"
               ng-required="model.metadata.columnList[input.key].required"></textarea>
+            <div ng-switch-when="days" class="row">
+              <div class="col-sm-1" style="width: 14.28%">
+                <label class="checkbox" style="left: 20px" for="monday">
+                  <input id="monday" name="name" ng-model="record.monday" type="checkbox"> Monday
+                </label>
+              </div>
+              <div class="col-sm-1" style="width: 14.28%">
+                <label class="checkbox" style="left: 20px" for="tuesday">
+                  <input id="tuesday" name="name" ng-model="record.tuesday" type="checkbox"> Tuesday
+                </label>
+              </div>
+              <div class="col-sm-1" style="width: 14.28%">
+                <label class="checkbox" style="left: 20px" for="wednesday">
+                  <input id="wednesday" name="name" ng-model="record.wednesday" type="checkbox"> Wednesday
+                </label>
+              </div>
+              <div class="col-sm-1" style="width: 14.28%">
+                <label class="checkbox" style="left: 20px" for="thursday">
+                  <input id="thursday" name="name" ng-model="record.thursday" type="checkbox"> Thursday
+                </label>
+              </div>
+              <div class="col-sm-1" style="width: 14.28%">
+                <label class="checkbox" style="left: 20px" for="friday">
+                  <input id="friday" name="name" ng-model="record.friday" type="checkbox"> Friday
+                </label>
+              </div>
+              <div class="col-sm-1" style="width: 14.28%">
+                <label class="checkbox" style="left: 20px" for="saturday">
+                  <input id="saturday" name="name" ng-model="record.saturday" type="checkbox"> Saturday
+                </label>
+              </div>
+              <div class="col-sm-1" style="width: 14.28%">
+                <label class="checkbox" style="left: 20px" for="sunday">
+                  <input id="sunday" name="name" ng-model="record.sunday" type="checkbox"> Sunday
+                </label>
+              </div>
+            </div>
             <div ng-switch-when="months" class="row">
               <div class="col-sm-2">
-                <label class="checkbox" for="january">
+                <label class="checkbox" style="left: 20px" for="january">
                   <input id="january" name="name" ng-model="record.january" type="checkbox"> January
                 </label>
               </div>
               <div class="col-sm-2">
-                <label class="checkbox" for="february">
+                <label class="checkbox" style="left: 20px" for="february">
                   <input id="february" name="name" ng-model="record.february" type="checkbox"> February
                 </label>
               </div>
               <div class="col-sm-2">
-                <label class="checkbox" for="march">
+                <label class="checkbox" style="left: 20px" for="march">
                   <input id="march" name="name" ng-model="record.march" type="checkbox"> March
                 </label>
               </div>
               <div class="col-sm-2">
-                <label class="checkbox" for="april">
+                <label class="checkbox" style="left: 20px" for="april">
                   <input id="april" name="name" ng-model="record.april" type="checkbox"> April
                 </label>
               </div>
               <div class="col-sm-2">
-                <label class="checkbox" for="may">
+                <label class="checkbox" style="left: 20px" for="may">
                   <input id="may" name="name" ng-model="record.may" type="checkbox"> May
                 </label>
               </div>
               <div class="col-sm-2">
-                <label class="checkbox" for="june">
+                <label class="checkbox" style="left: 20px" for="june">
                   <input id="june" name="name" ng-model="record.june" type="checkbox"> June
                 </label>
               </div>
             </div>
             <div ng-switch-when="months" class="row">
               <div class="col-sm-2">
-                <label class="checkbox" for="july">
+                <label class="checkbox" style="left: 20px" for="july">
                   <input id="july" name="name" ng-model="record.july" type="checkbox"> July
                 </label>
               </div>
               <div class="col-sm-2">
-                <label class="checkbox" for="august">
+                <label class="checkbox" style="left: 20px" for="august">
                   <input id="august" name="name" ng-model="record.august" type="checkbox"> August
                 </label>
               </div>
               <div class="col-sm-2">
-                <label class="checkbox" for="september">
+                <label class="checkbox" style="left: 20px" for="september">
                   <input id="september" name="name" ng-model="record.september" type="checkbox"> September
                 </label>
               </div>
               <div class="col-sm-2">
-                <label class="checkbox" for="october">
+                <label class="checkbox" style="left: 20px" for="october">
                   <input id="october" name="name" ng-model="record.october" type="checkbox"> October
                 </label>
               </div>
               <div class="col-sm-2">
-                <label class="checkbox" for="november">
+                <label class="checkbox" style="left: 20px" for="november">
                   <input id="november" name="name" ng-model="record.november" type="checkbox"> November
                 </label>
               </div>
               <div class="col-sm-2">
-                <label class="checkbox" for="december">
+                <label class="checkbox" style="left: 20px" for="december">
                   <input id="december" name="name" ng-model="record.december" type="checkbox"> December
                 </label>
               </div>
