--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -110,6 +110,7 @@
                     ng-attr-id="{{ input.key }}"
                     name="name"
                     ng-options="item.value as item.name for item in input.enumList"
+                    cn-options-disabled="item.disabled for item in input.enumList"
                     ng-model="model.viewModel.record[input.key]"
                     ng-change="patch( input.key )"
                     class="form-control"
