Overhaul of directive/controller in client-side modules
Directives weren't being used.  This has been corrected and all controllers
have been moved directly into their directives.
Also did some work on the calendar directive.

--- a/web/app/cenozo/record-calendar.tpl.html
+++ b/web/app/cenozo/record-calendar.tpl.html
@@ -16,7 +16,8 @@
            tooltip="Click to expand {{ model.module.name.singular }} calendar"
            tooltip-placement="left"></i>
       </div>
-      {{ heading }}
+      {{ heading }}{{ model.editEnabled ? '' : ' (read only)' }}
+      <span ng-if="model.calendarModel.isLoading">(Loading&hellip;)</span>
     </h4>
   </div>
   <div class="container-fluid spacer calendar"
