--- a/web/app/error/state.tpl.html
+++ b/web/app/error/state.tpl.html
@@ -3,7 +3,7 @@
     <h3 class="text-primary">State Not Found</h3>
     <div class="container-fluid">
       <blockquote>
-        Sorry, the client has no way to fulfil your request since the page you requested is unregistered.
+        Sorry, the client has no way to fulfill your request since the page you requested is unregistered.
         Please <a ng-click="reload()">reload</a> the page or
         <a ng-click="back()">go back</a> to the previous page.
       </blockquote>
