--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -202,6 +202,12 @@
     </ng-form>
   </div>
   <div class="form-footer text-right rounded-bottom bg-info">
+    <div class="btn-group pull-left">
+      <button class="btn btn-default"
+              type="button"
+              ng-repeat="(name, execute) in model.module.extraOperationList.add"
+              ng-click="execute( model.viewModel, $state, CnHttpFactory )">{{ name }}</button>
+    </div>
     <button type="button" class="btn btn-default" ng-click="back()">Cancel</button>
     <button type="button" class="btn btn-primary" ng-click="submit()" ng-disabled="isAdding">
       <i class="glyphicon glyphicon-cloud-upload"></i> Save
