--- a/web/app/cenozo/record-calendar.tpl.html
+++ b/web/app/cenozo/record-calendar.tpl.html
@@ -24,6 +24,12 @@
        ng-class="{'in':!initCollapsed}"
        id="{{ model.module.subject.camel }}Calendar"></div>
   <div class="form-footer text-right rounded-bottom bg-info">
+    <div class="btn-group pull-left">
+      <button class="btn btn-default"
+              type="button"
+              ng-repeat="(name, execute) in model.module.extraOperationList.calendar"
+              ng-click="execute( model.viewModel, $state, CnHttpFactory )">{{ name }}</button>
+    </div>
     <div class="btn-group">
       <button class="btn btn-primary"
               type="button"
