--- a/web/app/cenozo/record-calendar.tpl.html
+++ b/web/app/cenozo/record-calendar.tpl.html
@@ -27,8 +27,9 @@
     <div class="btn-group pull-left">
       <button class="btn btn-default"
               type="button"
-              ng-repeat="(name, execute) in model.module.extraOperationList.calendar"
-              ng-click="execute( model.viewModel, $state, CnHttpFactory )">{{ name }}</button>
+              ng-repeat="(name, op) in model.module.extraOperationList.calendar"
+              ng-disabled="op.disabled"
+              ng-click="op.operation( model.viewModel, $state, CnHttpFactory )">{{ name }}</button>
     </div>
     <div class="btn-group">
       <button class="btn btn-primary"
