--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -136,8 +136,10 @@
             <div class="btn-group pull-right">
               <button class="btn btn-default"
                       type="button"
-                      ng-repeat="(name, execute) in model.module.extraOperationList.list"
-                      ng-click="execute( model.viewModel, $state, CnHttpFactory )">{{ name }}</button>
+                      ng-repeat="op in model.module.extraOperationList.list"
+                      ng-disabled="op.disabled"
+                      ng-class="op.classes"
+                      ng-click="op.operation( $state, model )">{{ op.name }}</button>
             </div>
           </td>
         </tr>
@@ -157,8 +159,10 @@
     <div class="btn-group pull-right">
       <button class="btn btn-default"
               type="button"
-              ng-repeat="(name, execute) in model.module.extraOperationList.list"
-              ng-click="execute( model.viewModel, $state, CnHttpFactory )">{{ name }}</button>
+              ng-repeat="op in model.module.extraOperationList.list"
+              ng-disabled="op.disabled"
+              ng-class="op.classes"
+              ng-click="op.operation( $state, model )">{{ op.name }}</button>
     </div>
   </div>
 </div>
