--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -335,8 +335,10 @@
       <div class="btn-group pull-left">
         <button class="btn btn-default"
                 type="button"
-                ng-repeat="(name, execute) in model.module.extraOperationList.view"
-                ng-click="execute( model.viewModel, $state, CnHttpFactory )">{{ name }}</button>
+                ng-repeat="op in model.module.extraOperationList.view"
+                ng-disabled="op.disabled"
+                ng-class="op.classes"
+                ng-click="op.operation( $state, model )">{{ op.name }}</button>
       </div>
       <div class="btn-group">
         <button ng-if="model.deleteEnabled"
