--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -37,17 +37,20 @@
                       ng-class="0 < model.listModel.columnRestrictLists[column.key].length ? 'btn-success' : 'btn-info'"
                       ng-click="setRestrictList( column.key )"
                       tooltip="{{ 0 < model.listModel.columnRestrictLists[column.key].length ?
-                                  'Click to modify existing restriction applied to the ' + column.title + ' column' :
-                                  'Click to restrict this list based on the ' + column.title + ' column' }}">
+                        'Click to modify existing restriction applied to the ' + column.title + ' column' :
+                        'Click to restrict this list based on the ' + column.title + ' column' }}"
+                      tooltip-placement="bottom"
+                      tooltip-popup-delay="1000">
                 <i class="glyphicon glyphicon-filter"></i>
               </button>
             </div>
-            <div class="text-center text-info full-width" ng-if="0 < model.listModel.columnRestrictLists[column.key].length">
+            <div class="text-center text-info full-width"
+                 ng-if="0 < model.listModel.columnRestrictLists[column.key].length">
               <p class="restrict-description"
                  ng-if="0 < model.listModel.columnRestrictLists[column.key].length"
                  tooltip="To remove the restriction click the filter icon, then the remove button"
                  tooltip-placement="bottom"
-                 tooltip-popup-delay="750">
+                 tooltip-popup-delay="1000">
                 <span ng-repeat="restrict in model.listModel.columnRestrictLists[column.key]">
                   {{ ( restrict.logic ? restrict.logic.toUpperCase() + ' ' : '' ) + restrict.description }}
                   <br ng-if"!$last">
