--- a/web/app/cenozo/loading.tpl.html
+++ b/web/app/cenozo/loading.tpl.html
@@ -1,6 +1,4 @@
 <div class="container-fluid bg-white">
-  <h3 class="text-primary text-center">
-    {{ undefined === message ? 'Waiting for a response from the server' : message }}
-  </h3>
+  <h3 class="text-primary text-center">{{ message }}</h3>
   <div class="loading"></div>
 </div>
