--- a/web/app/search/list.tpl.html
+++ b/web/app/search/list.tpl.html
@@ -1,7 +1,13 @@
 <form class="form-horizontal container-fluid">
   <div class="form-body">
     <div class="form-group">
-      <label for="q" class="col-sm-1 control-label">Search</label>
+      <label for="q"
+             tooltip="All participants which match any of the words provided will be included. 
+                      Put words &quot;between quotes&quot; to search for phrases.  Use the percent
+                      symbol (%) as a wildcard match and the underscore (_) as a single-letter
+                      wildcard match."
+             tooltip-placement="right"
+             class="col-sm-1 control-label">Search</label>
       <div class="col-sm-11">
         <div class="input-group">
         <input id="q"
