--- a/web/app/cenozo/modal-site-role.tpl.html
+++ b/web/app/cenozo/modal-site-role.tpl.html
@@ -15,6 +15,7 @@
                 ng-options="site.id as site.name for site in siteList"
                 ng-model="siteId"
                 ng-change="refreshRoleList()"
+                ng-disabled="loading"
                 class="form-control"></select>
       </div>
     </div>
@@ -25,12 +26,13 @@
                 name="roleId"
                 ng-options="role.id as role.name for role in roleList"
                 ng-model="roleId"
+                ng-disabled="loading"
                 class="form-control"></select>
       </div>
     </div>
   </div>
   <div class="modal-footer bg-info">
     <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
-    <button type="submit" class="btn btn-primary">OK</button>
+    <button type="submit" ng-disabled="loading" class="btn btn-primary">OK</button>
   </div>
 </form>
